[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "basicanalysis"
version = "0.0.0"
dependencies = [
    "matplotlib==3.8.4",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "scipy==1.13.0",
    "seaborn==0.13.2",
]
requires-python = ">= 3.8"
authors = [
  {name = "Author 1" },
]
maintainers = [
  {name = "Name 1" },
]
readme = "README.md"

[project.urls]
Repository = "https://github.com/bsc-performance-tools/basicanalysis"
Issues = "https://github.com/bsc-performance-tools/basicanalysis/issues"
